--- a/gb/16/4/19/n7570610.md
+++ b/gb/16/4/19/n7570610.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vebhse3774/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vebhse3774/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vebhse3774/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vebhse3774/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vebhse3774/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vebhse3774/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vebhse3774/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>飞剑：中共惧怕律师为法轮功学员辩护</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/4970a9f30e23b8db57336db8567cacf0-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年04月19日讯】为<a class="\&quot;popup\&quot;" title="\&quot;法轮大法，也称法轮功，一九九二年五月由李洪志先生传出的佛家上乘修炼大法，以宇宙最高特性“真善忍”为根本指导，按照宇宙的演化原理而修炼。经亿万人的修炼实践证明，法轮大法是大法大道，在把真正修炼的人带到高层次的同时，对稳定社会、提高人们的身体素质和道德水准，也起到了不可估量的正面作用。" href="\&quot;http://www.minghui.org/mh/glossary.md#1#1\&quot;">法轮功</a>学 员做<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%97%A0%E7%BD%AA%E8%BE%A9%E6%8A%A4.md#1">无罪辩护</a>的律师越来越多。而参与迫害<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的公检法司人员，及推动迫害的“610”等部门的人非常惧怕这样的律师为法轮功学员辩护，因而他们采取 各种手段企图阻止律师依法阅卷、会见当事人，甚至刁难律师出庭辩护，在律师辩护时，更是无理打断，甚至对律师大打出手，公检法司人员的这种种执法犯法行为 只能说明他们内心的惧怕，因为中共迫害法轮功完全是非法的，对好人的迫害不仅是在犯罪，更要受到天谴。而这些在中共体制内，在权大于法的“潜规则”下的执 法人员，就被中共裹挟而执法犯法了，自是对正义心存恐惧</p>
+	<p>【大纪元2016年04月19日讯】为<a class="\&quot;popup\&quot;" title="\&quot;法轮大法，也称法轮功，一九九二年五月由李洪志先生传出的佛家上乘修炼大法，以宇宙最高特性“真善忍”为根本指导，按照宇宙的演化原理而修炼。经亿万人的修炼实践证明，法轮大法是大法大道，在把真正修炼的人带到高层次的同时，对稳定社会、提高人们的身体素质和道德水准，也起到了不可估量的正面作用。" href="\&quot;http://www.minghui.org/mh/glossary.md#1#1\&quot;">法轮功</a>学 员做<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%97%A0%E7%BD%AA%E8%BE%A9%E6%8A%A4.md#1">无罪辩护</a>的律师越来越多。而参与迫害<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员的公检法司人员，及推动迫害的“610”等部门的人非常惧怕这样的律师为法轮功学员辩护，因而他们采取 各种手段企图阻止律师依法阅卷、会见当事人，甚至刁难律师出庭辩护，在律师辩护时，更是无理打断，甚至对律师大打出手，公检法司人员的这种种执法犯法行为 只能说明他们内心的惧怕，因为中共迫害法轮功完全是非法的，对好人的迫害不仅是在犯罪，更要受到天谴。而这些在中共体制内，在权大于法的“潜规则”下的执 法人员，就被中共裹挟而执法犯法了，自是对正义心存恐惧</p>
 <div id="\&quot;ar_bArticleContent_OuterFrame\&quot;" class="\&quot;ar_articleAuthor\&quot;">
 <div id="\&quot;ar_bArticleContent\&quot;" class="\&quot;ar_articleContent\&quot;">
 <p><b>公安警察的恐惧</b></p>
-<p>有些<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员一被绑架，家人就迅速为他聘请 了律师。实施绑架的警察，特别是那些所谓的办理法轮功学员案件的警察，面对律师是异常恐惧的，这是因为绑架法轮功学员的本身就是违法的。中国宪法明明白白 写着保障公民的信仰自由、言论自由，他们信仰法轮功有什么错？他们向世人揭露迫害的真相也是属于言论自由的范畴，本应受到法律保护。谁给了警察绑架好人的 权力？这些警察执行的根本不是法律，而是中共江××集团为迫害法轮功而制定的一些违法的政策。警察执法应当遵循法律，政策代表不了法律，当政策和法律冲突 时，执行违法的政策就等同于违法。面对律师的质疑和投诉，这些所谓的办案警察怎能不心生恐惧？</p>
+<p>有些<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员一被绑架，家人就迅速为他聘请 了律师。实施绑架的警察，特别是那些所谓的办理法轮功学员案件的警察，面对律师是异常恐惧的，这是因为绑架法轮功学员的本身就是违法的。中国宪法明明白白 写着保障公民的信仰自由、言论自由，他们信仰法轮功有什么错？他们向世人揭露迫害的真相也是属于言论自由的范畴，本应受到法律保护。谁给了警察绑架好人的 权力？这些警察执行的根本不是法律，而是中共江××集团为迫害法轮功而制定的一些违法的政策。警察执法应当遵循法律，政策代表不了法律，当政策和法律冲突 时，执行违法的政策就等同于违法。面对律师的质疑和投诉，这些所谓的办案警察怎能不心生恐惧？</p>
 <p><b>检察官的恐惧</b></p>
 <p>检 察官在迫害法轮功学员的罪恶链条中主要起着非法批捕和非法起诉的作用。检察官在法轮功学员没有任何罪错的情况下作出的批捕当然属于犯罪的范畴。为什么只要 是公安报上来的涉及法轮功的案件就得批捕？这方面的规定是谁定的？这样的规定合法不合法？检察官的职责难道只是见这类的案件就批捕吗？你“检察”的是什么 呢？你这不是明显的渎职吗？</p>
 <p>对法轮功学员非法批捕后，检察官下一步的工作就是对法轮功学员非法起诉。非得将好人说成坏人，将合法的说成非法 的，践踏法律实施栽赃陷害，检察官对自己的罪恶最清楚。如果没有非法起诉法轮功学员这个环节，对法轮功学员的迫害就上升不到法律的层面上来，检察官同样成 了中共迫害法轮功的帮凶。</p>
-<p>检察官非常不愿意看到律师为法轮功学员辩护的另外一个主要原因是法庭上的辩论。起诉法轮功学员的检察官在法庭上就 变成了公诉人。他对法轮功学员的起诉是按照有罪进行起诉的，而律师为法轮功学员作的是<ahref="https://github.com/vebhse3774/djy/blob/master/gb/tag/%E6%97%A0%E7%BD%AA%E8%BE%A9%E6%8A%A4.md#1">无罪辩护</a>。他当然害怕律师在法庭上指出自己的起诉是非法的了，自己违 法的事被揭露那不等于承认自己在犯罪吗？虽说在中共主导迫害法轮功的情况下，非法的指控也能成为判决法轮功学员的理由，可那毕竟是因为自己在违法的情况下 作出的起诉才造成的。一旦法轮功受到公正对待时，他今天的起诉就是将来审判他的证据。何况律师已经在法庭上明确指出了他的起诉是非法的，他还硬着头皮栽 赃，那不是坐实了自己犯罪的事实吗？</p>
+<p>检察官非常不愿意看到律师为法轮功学员辩护的另外一个主要原因是法庭上的辩论。起诉法轮功学员的检察官在法庭上就 变成了公诉人。他对法轮功学员的起诉是按照有罪进行起诉的，而律师为法轮功学员作的是<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%97%A0%E7%BD%AA%E8%BE%A9%E6%8A%A4.md#1">无罪辩护</a>。他当然害怕律师在法庭上指出自己的起诉是非法的了，自己违 法的事被揭露那不等于承认自己在犯罪吗？虽说在中共主导迫害法轮功的情况下，非法的指控也能成为判决法轮功学员的理由，可那毕竟是因为自己在违法的情况下 作出的起诉才造成的。一旦法轮功受到公正对待时，他今天的起诉就是将来审判他的证据。何况律师已经在法庭上明确指出了他的起诉是非法的，他还硬着头皮栽 赃，那不是坐实了自己犯罪的事实吗？</p>
 <p><b>法官的恐惧</b></p>
 <p>一边是非法的起诉，一边是正义的辩护。谁是谁非，看的清清楚 楚。要说判决，这样的案件最好判，直接将法轮功学员当庭释放。可是法官开庭前就已经被耳提面命过了：必须判法轮功学员有罪。他怎么办？判法轮功学员有罪， 他就是在犯罪；判法轮功学员无罪，他就得违背上级的指令。如果没有律师的辩护，他胡乱一判，管他违法不违法，反正是上面让判的，自己甘愿当个傀儡就是了。 可现在指出非法指控的律师就在那站着哪，人家引述的法律条文明明白白，公诉人都理屈词穷了，是非在这摆着呢，自己怎么判？判了法轮功学员有罪，那是天大的 冤枉，人家就得被投进监狱，自己这不是在为虎作伥吗？就象一个人受人指使杀了人，指使者是主谋，而杀人者不就是杀人犯吗？作为法官他能不清楚吗？只要有一 点良知和理性，他就下不了那样的判决。判法轮功学员有罪的本身就是在犯罪，而且日后还必将成为被追究责任的对象。考虑到未来，他害怕；面对法庭上的律师， 他当然更害怕。</p>
 <p><b>“610”的恐惧</b></p>
@@ -34,42 +34,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/8/9/3/n2250401.md#1">韩志广: 法轮功信仰者张秀兰无罪辩护意见</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/8/12/29/n2378870.md#1">突破中共禁令为法轮功无罪辩护成潮流</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/6/18/n2941469.md#1">清泉：法官为何怕律师为法轮功作无罪辩护</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/14/10/14/n4271445.md#1">他山：中共指派的律师也为法轮功学员做无罪辩护</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/9/3/n2250401.md#1">韩志广: 法轮功信仰者张秀兰无罪辩护意见</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/29/n2378870.md#1">突破中共禁令为法轮功无罪辩护成潮流</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/6/18/n2941469.md#1">清泉：法官为何怕律师为法轮功作无罪辩护</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/10/14/n4271445.md#1">他山：中共指派的律师也为法轮功学员做无罪辩护</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/31/n10010812.md#1" target="_blank">文武：反封建“等级制度”是典型的党文化</a></li><li><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10204699.md#1" target="_blank">古玉文：消灭私有制不是出路（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/26/n12358494.md#1">神奇的玛雅金字塔 你拍手它传回鸟叫声</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/31/n12370693.md#1">【重播】白宫简报会：谴责暴乱 疫情减缓</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12367808.md#1">【新闻第一现场】姚城：中美首战即打核战</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12365776.md#1">【十字路口】馆长遇袭谁搞鬼？川普连任台受益</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12364079.md#1">【珍言真语】蔡咏梅：大佛洗脚天下乱 末代征兆</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12365460.md#1">偷美研究机密逃回国 中共军方学者机场被抓</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/29/n12365540.md#1">川普支持率飙升 加州人赞共和党大会</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12365016.md#1">成龙北京豪宅被拍卖 入住13年突遭查封</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12368618.md#1">当妈后首晒女儿动态 唐嫣配文：宝贝的宝贝</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12368200.md#1">移民进度？黄秋生宣布搬离住香港20年旧居</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/27/n12362661.md#1">福布斯中国名人榜出炉 美籍刘亦菲入选遭质疑</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12365345.md#1">台湾馆长遭枪击 杜汶泽看直播喊话：要撑住</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363545.md#1">不用咖啡机 在家也能冲泡好喝的拿铁咖啡</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12367461.md#1">为什么以色列的F-35战机与他国不同？</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/25/n12357051.md#1">【罗厨寻味】番茄炒牛肉</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/30/n12367367.md#1">美国科学家一天飞进飓风5次 拍下罕见画面</a></li>
-<li><a href="https://github.com/vebhse3774/djy/blob/master/gb/20/8/28/n12363975.md#1">安倍晋三因溃疡性大肠炎再辞职！4症状是警讯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vebhse3774/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/19/n7570610.htm">飞剑：中共惧怕律师为法轮功学员辩护</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/19/n7570610.htm">飞剑：中共惧怕律师为法轮功学员辩护</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/vebhse3774/djy/blob/master/gb/16/4/19/n7570610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vebhse3774/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vebhse3774/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vebhse3774/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vebhse3774/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/16/4/19/n7570610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
